--- a/pom.xml
+++ b/pom.xml
@@ -149,7 +149,15 @@
 					<target>1.8</target>
 				</configuration>
 			</plugin>
-		</plugins>
+		<!--<plugin>
+        <groupId>com.heroku.sdk</groupId>
+        <artifactId>heroku-maven-plugin</artifactId>
+        <version>3.0.3</version>
+         <configuration>
+        <appName>dkmsbroswser-app</appName>
+      </configuration>
+      </plugin>-->
+      	</plugins>
 	</build>
 
 </project>
